--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "@types/react": "17.0.2"
   },
   "peerDependencies": {
     "react": "*",
