--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-image-light-gallery-example",
+  "name": "react-native-video-player-example",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -13,18 +13,16 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "babel-plugin-module-resolver": "^4.1.0",
+    "lottie-react-native": "^5.0.1",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-awesome-slider": "^0.1.7",
     "react-native-gesture-handler": "1.10.3",
     "react-native-reanimated": "^2.3.1",
     "react-native-redash": "^16.2.3",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.1"
-  },
-  "peerDependencies": {
-    "react-native-gesture-handler": "1.10.3",
-    "react-native-reanimated": ">2",
-    "react-native-redash": "^16"
+    "react-native-screens": "^3.10.1",
+    "react-native-video": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -41,6 +39,13 @@
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.4"
+  },
+  "peerDependencies": {
+    "lottie-react-native": "*",
+    "react-native-gesture-handler": "1.10.3",
+    "react-native-reanimated": ">2",
+    "react-native-redash": "^16",
+    "react-native-video": "*"
   },
   "resolutions": {
     "@types/react": "^17"
