--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -21,9 +22,10 @@
     "react-native-orientation-locker": "^1.4.0",
     "react-native-reanimated": "^2.3.1",
     "react-native-redash": "^16.2.3",
-    "react-native-root-view-background-color": "git+https://github.com/alantoa/react-native-root-view-background-color",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
+    "react-native-set-rootview-bgcolor": "^2.0.0",
+    "react-native-svg": "^12.1.1",
     "react-native-video": "*"
   },
   "devDependencies": {
