--- a/example/package.json
+++ b/example/package.json
@@ -16,7 +16,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "lottie-react-native": "^5.0.1",
     "react": "17.0.2",
-    "react-native": "0.66.4",
+    "react-native": "^0.67.3",
     "react-native-awesome-slider": "^0.1.14",
     "react-native-gesture-handler": "1.10.3",
     "react-native-orientation-locker": "^1.4.0",
@@ -24,7 +24,6 @@
     "react-native-redash": "^16.2.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
-    "react-native-set-rootview-bgcolor": "^2.0.0",
     "react-native-svg": "^12.1.1",
     "react-native-video": "*"
   },
