refactor: rewrite using react-native-gesture-handle v2

--- a/package.json
+++ b/package.json
@@ -70,9 +70,9 @@
     "lottie-react-native": "^5.0.1",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-native": "0.66.4",
-    "react-native-awesome-slider": "^1.4.0",
+    "react-native-awesome-slider": "^2.0.1",
     "react-native-builder-bob": "^0.18.2",
-    "react-native-gesture-handler": "1.10.3",
+    "react-native-gesture-handler": "^2.3.2",
     "react-native-orientation-locker": "*",
     "react-native-reanimated": "2.1.0",
     "react-native-safe-area-context": "^3.3.2",
@@ -87,9 +87,9 @@
     "react": "*",
     "react-native": "*",
     "react-native-awesome-slider": "*",
-    "react-native-gesture-handler": "*",
+    "react-native-gesture-handler": ">=2.0.0",
     "react-native-orientation-locker": "*",
-    "react-native-reanimated": ">2",
+    "react-native-reanimated": ">=2.0.0",
     "react-native-safe-area-context": "*",
     "react-native-video": "*"
   },
