--- a/example/package.json
+++ b/example/package.json
@@ -24,7 +24,7 @@
     "react-native-redash": "^16.2.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "^12.3.0",
     "react-native-video": "*"
   },
   "devDependencies": {
@@ -40,6 +40,7 @@
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
+    "react-native-iconfont-cli": "^2.2.4",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.4"
   },
