fix: update android example

--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -3,10 +3,11 @@
 buildscript {
     ext {
         buildToolsVersion = "30.0.2"
-        minSdkVersion = 21
-        compileSdkVersion = 30
-        targetSdkVersion = 30
+        minSdkVersion = 23
+        compileSdkVersion = 31
+        targetSdkVersion = 31
         ndkVersion = "21.4.7075529"
+        kotlin_version = "1.6.0"
     }
     repositories {
         google()
@@ -14,6 +15,8 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:4.2.2")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
