--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-video-player-example",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -9,7 +9,9 @@
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "icon": "npx iconfont-rn",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "pods": "cd ios && pod install",
+    "build-android": "cd android && ./gradlew assembleRelease"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
@@ -20,25 +22,25 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "lottie-react-native": "^5.0.1",
     "react": "17.0.2",
-    "react-native": "^0.67.3",
-    "react-native-awesome-slider": "^2.0.1",
+    "react-native": "^0.67.4",
+    "react-native-awesome-slider": "^2.0.3",
+    "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-inkwell": "^0.4.5",
-    "react-native-lottie-tabbar": "^0.1.3",
     "react-native-orientation-locker": "^1.4.0",
     "react-native-reanimated": "^2.3.1",
     "react-native-redash": "^16.2.3",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-screens": "^3.10.1",
     "react-native-svg": "^12.3.0",
-    "react-native-video": "*"
+    "react-native-video": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
-    "@types/react-native": "^0.66.4",
+    "@types/react-native": "^0.67.3",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
