--- a/package.json
+++ b/package.json
@@ -52,11 +52,11 @@
   },
   "homepage": "https://github.com/MonsterAnan/react-native-video-player",
   "dependencies": {
-    "@types/react-native-video": "^5.0.14",
     "lodash.padstart": "^4.6.1",
-    "react-native-video": "^5.2.1"
+    "react-native-video": "alpha"
   },
   "devDependencies": {
+    "@types/react-native-video": "alpha",
     "@babel/core": "^7.21.4",
     "@babel/runtime": "^7.21.0",
     "@react-native-community/eslint-config": "^3.2.0",
@@ -78,7 +78,7 @@
     "react-native-builder-bob": "^0.20.4",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-orientation-locker": "1.5.0",
-    "react-native-reanimated": "3.0.2",
+    "react-native-reanimated": "3.1.0",
     "react-native-safe-area-context": "^4.5.1",
     "react-test-renderer": "18.2.0",
     "release-it": "15.10.1",
@@ -93,7 +93,8 @@
     "react-native-gesture-handler": ">=2.0.0",
     "react-native-orientation-locker": "*",
     "react-native-reanimated": ">=3.0.0",
-    "react-native-safe-area-context": "*"
+    "react-native-safe-area-context": "*",
+    "react-native-video": ">=6.0.0"
   },
   "jest": {
     "preset": "react-native",
