--- a/package.json
+++ b/package.json
@@ -53,18 +53,19 @@
   "homepage": "https://github.com/MonsterAnan/react-native-video-player",
   "dependencies": {
     "lodash.padstart": "^4.6.1",
-    "react-native-video": "alpha"
+    "react-native-video": "5.2.1"
   },
   "devDependencies": {
-    "@types/react-native-video": "alpha",
     "@babel/core": "^7.21.4",
     "@babel/runtime": "^7.21.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@react-navigation/core": "6.4.8",
     "@release-it/conventional-changelog": "^5.1.1",
     "@types/jest": "^29.5.0",
-    "@types/react": "18.0.33",
-    "@types/react-native": "^0.71.5",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-native": "^0.72.2",
+    "@types/react-native-video": "5.0.15",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.57.1",
